# stream-cave

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
.github/TEMPLATES/: feature_template.md  issue_template.md
.github/workflows/: buildLinux.yml  buildWithNix.yml
docs/examples/: schedule.json
src/: cave.rs  lib.rs  main.rs  watcher.rs
src/cave/: authentication.rs  file_watcher.rs  player.rs  tasks_handler.rs  twitch_socket.rs
src/cave/twitch_socket/: api_structs.rs
src/watcher/: authentication.rs  event_handler.rs  file_watcher.rs  player.rs  tasks_handler.rs  twitch_socket.rs
src/watcher/twitch_socket/: api_structs.rs
tests/resources/: config.conf  config.json  schedule.json  video.mkv
tests/resources/twitch-cli/: .twitch-cli.env  eventCache.db
