[package]
name = "stream-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["__rustls-tls"]}
futures-util = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
directories = "5"
