[package]
name = "stream-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"]}
futures-util = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
directories = "5"
twitch_oauth2 = { version = "0.14", features = [ "reqwest", "mock_api" ] }
rpassword = "7.3.1"
percent-encoding = "2.3.1"
