[package]
name = "stream-cave"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"]}
native-tls = "0.2.12"
futures-util = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
directories = "5"
twitch_oauth2 = { version = "0.14", features = [ "reqwest", "mock_api" ] }
rpassword = "7.3.1"
percent-encoding = "2.3.1"
clap = { version = "4.5.21", features = ["derive"] }
clap_derive = "=4.5.18"

[lints.clippy]
unwrap_used = "warn"
pedantic = "warn"
nursery = "warn"

[[bin]]
name = "stream-cave"
path = "src/bin/stream-cave.rs"

[[bin]]
name = "stream-caved"
path = "src/bin/stream-caved.rs"
